--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,40 @@
 @charset "utf-8";
+* {margin: 0; padding: 0; border: 0; font-size: 100%; }
 body {
-	background-image: url(../images/black_texture_texture_background_03_hd_pictures_169904.jpg);
-	padding: 5px;
-	background-repeat: repeat;
+	background-image: url("../images/black_texture_texture_background_03_hd_pictures_169904.jpg");
+	padding: 20px;
+background-repeat: repeat;
+background-size: 20%;
 }
 .lorem {
 	background-color: #616161;
-	width: 472px;
-	height: 152px;
-	-webkit-box-shadow: 2px 2px 15px 2px #3F3F3F;
-	border-radius: 8px;
 	box-shadow: 2px 2px 15px 2px #3F3F3F;
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
 	font-size: 17px;
 }
-.Title {
+.title {
 	color: #FFFFFF;
 	font-size: 23px;
 	text-shadow: 3px 1px 5px #767676;
 }
-.Created {
-	color: #B70003;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
-	font-size: 12px;
-	text-shadow: 1px 1px 5px #5F0001;
-}
+ 
 #my-id {
 	color: #7E0002;
 }
-.my-container {
-	background-color: #000000;
-	background-clip: padding-box;
-	background-position: 0% 0%;
-	background-image: -webkit-linear-gradient(270deg,rgba(50,49,49,1.00) 0%,rgba(0,0,0,1.00) 57.41%,rgba(2,2,2,1.00) 100%);
-	background-image: -moz-linear-gradient(270deg,rgba(50,49,49,1.00) 0%,rgba(0,0,0,1.00) 57.41%,rgba(2,2,2,1.00) 100%);
-	background-image: -o-linear-gradient(270deg,rgba(50,49,49,1.00) 0%,rgba(0,0,0,1.00) 57.41%,rgba(2,2,2,1.00) 100%);
-	background-image: linear-gradient(180deg,rgba(50,49,49,1.00) 0%,rgba(0,0,0,1.00) 57.41%,rgba(2,2,2,1.00) 100%);
-	color: #737373;
+.my-container { 
+border: ridge; 
+padding: 5px;
+background-color: blanchedalmond;
+}
+footer{
+text-align: center;
+font-size: 20px;
+color: aqua;
+}
+section{
+text-align: center;
+display: inline-block;
+}
+aside{
+text-align: center;
 }
