--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ background-size: 20%;
 border: ridge; 
 padding: 5px;
 background-color: blanchedalmond;
+	font-family: 'Permanent Marker', cursive;
 }
 footer{
 text-align: center;
@@ -36,5 +37,12 @@ text-align: center;
 display: inline-block;
 }
 aside{
+text-align: center;
+}
+.margin {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 800px;
 text-align: center;
 }
